se agrega la carpeta css y se modifica codigo de los archivos hhtml

--- a/productos.html
+++ b/productos.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <title>Productos</title>
+<link rel="stylesheet" href="css/productos.css"
 <h1>Estos son nuestros productos</h1>
     
