--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Contacto</title>
-    <link rel="stylesheet" href="estilos.css"
+    <link rel="stylesheet" href="css/contacto.css"
 </head>
 <body>
     <h1>Contacto</h1>   
