se agregaron 2 productos a productos.html

--- a/productos.html
+++ b/productos.html
@@ -2,4 +2,7 @@
 <title>Productos</title>
 <link rel="stylesheet" href="css/productos.css"
 <h1>Estos son nuestros productos</h1>
-    
+<h2>Producto 1</h2>    
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi corporis id autem iste ipsum, mollitia excepturi ad unde totam, itaque, ipsam praesentium velit. Sequi sed, atque voluptatibus rerum nemo maiores.</p>
+<h3>Producto 3</h3>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis molestiae voluptas corrupti recusandae quod distinctio exercitationem ipsum ut. Aspernatur esse ullam sunt enim eum quasi vero asperiores excepturi, earum harum.</p>
